--- a/game_project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/game_project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,9 +79,22 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 [MRU]
 MRUItem0=/Game/StarterContent/Maps/Minimal_Default
 
+[DetailCustomWidgetExpansion]
+LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
+
 [EditorStartup]
 LastLevel=/Game/StarterContent/Maps/Minimal_Default
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+
+[DetailCategories]
+LandscapeEditorObject.New Landscape=True
+LandscapeEditorObject.Tool Settings=True
+LandscapeEditorObject.Brush Settings=True
+LandscapeEditorObject.Target Layers=True
+
+[ContentBrowser]
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
