--- a/game_project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/game_project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,6 +79,11 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 [MRU]
 MRUItem0=/Game/StarterContent/Maps/Minimal_Default
 
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 
@@ -97,4 +102,7 @@ LandscapeEditorObject.Target Layers=True
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
+
+[MessageLog]
+LastLogListing=LightingResults
 
