set collision presets on BlockAll for all of the assets

--- a/game_project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/game_project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -167,6 +167,8 @@ PaletteThumbnailScale=0.300000
 IsInSingleInstantiationMode=False
 IsInSpawnInCurrentLevelMode=False
 SingleInstantiationPlacementMode=0
+Radius=870.206055
+PaintDensity=0.280000
 
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
@@ -198,6 +200,7 @@ StaticMesh.Collision=True
 StaticMesh.ImportSettings=True
 StaticMesh.RayTracing=True
 StaticMesh.Navigation=True
+LandscapeEditorObject.Change Component Size=True
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -1141,4 +1144,7 @@ MRUItem1=/Game/TreePackMaple/Street/SM_streetHouse_A
 [AssetEditorToolkitTabLocation]
 /Game/TreePackMaple/Street/SM_streetHouse_A.SM_streetHouse_A=1
 /Game/TreePackMaple/Street/SM_streetHouse_B.SM_streetHouse_B=1
+
+[DetailCategoriesAdvanced]
+FoliageType_InstancedStaticMesh.Mesh=False
 
