adding trees to the land

--- a/game_project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/game_project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -135,6 +135,7 @@ MRUItem0=/Game/StarterContent/Maps/Minimal_Default
 OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
+UseErrorColoring=False
 
 [LandscapeEdit]
 ToolStrength=0.353333
