adding trees and herbs (part2)

--- a/game_project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/game_project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1144,12 +1144,14 @@ HierarchicalLODUtilities.TimeStamp=2024.04.20-10.23.59
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TreePackMaple/Street/SM_streetHouse_B
-MRUItem1=/Game/TreePackMaple/Street/SM_streetHouse_A
+MRUItem0=/Game/TreePackBirch/BirchTree/SM_birchTree_G
+MRUItem1=/Game/TreePackMaple/Street/SM_streetHouse_B
+MRUItem2=/Game/TreePackMaple/Street/SM_streetHouse_A
 
 [AssetEditorToolkitTabLocation]
 /Game/TreePackMaple/Street/SM_streetHouse_A.SM_streetHouse_A=1
 /Game/TreePackMaple/Street/SM_streetHouse_B.SM_streetHouse_B=1
+/Game/TreePackBirch/BirchTree/SM_birchTree_G.SM_birchTree_G=1
 
 [DetailCategoriesAdvanced]
 FoliageType_InstancedStaticMesh.Mesh=False
