--- a/game_project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/game_project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -173,6 +173,8 @@ UnpaintDensity=0.330000
 
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,
+Minimal_Default_C=PropertyWrapper.DefaultValueCategory.None,
 
 [EditorStartup]
 LastLevel=/Game/StarterContent/Maps/Minimal_Default
@@ -203,6 +205,12 @@ StaticMesh.ImportSettings=True
 StaticMesh.RayTracing=True
 StaticMesh.Navigation=True
 LandscapeEditorObject.Change Component Size=True
+Minimal_Default_C.Tick=True
+Minimal_Default_C.Replication=True
+Minimal_Default_C.Actor=True
+Minimal_Default_C.Input=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -228,6 +236,8 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
+ToolbarOpenBPClass.CurrentViewType=0
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -1159,4 +1169,8 @@ MRUItem2=/Game/TreePackMaple/Street/SM_streetHouse_A
 
 [DetailCategoriesAdvanced]
 FoliageType_InstancedStaticMesh.Mesh=False
+
+[DetailPropertyExpansion]
+Minimal_Default_C="\"Object.arr2\" "
+LevelScriptActor="\"Object.arr2\" "
 
