making blueprint to find an element that is common in these 3 arrays

--- a/game_project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/game_project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -174,7 +174,8 @@ UnpaintDensity=0.330000
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,
-Minimal_Default_C=PropertyWrapper.DefaultValueCategory.None,
+Minimal_Default_C=
+K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.None,
 
 [EditorStartup]
 LastLevel=/Game/StarterContent/Maps/Minimal_Default
@@ -211,6 +212,8 @@ Minimal_Default_C.Actor=True
 Minimal_Default_C.Input=True
 PropertyWrapper.Variable=True
 PropertyWrapper.DefaultValueCategory=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -1171,6 +1174,6 @@ MRUItem2=/Game/TreePackMaple/Street/SM_streetHouse_A
 FoliageType_InstancedStaticMesh.Mesh=False
 
 [DetailPropertyExpansion]
-Minimal_Default_C="\"Object.arr2\" "
-LevelScriptActor="\"Object.arr2\" "
+Minimal_Default_C=
+LevelScriptActor=
 
